--- a/styles.css
+++ b/styles.css
@@ -2,38 +2,43 @@
 * {
     box-sizing: border-box;
 }
-body{
+body {
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     color: #008080;
 }
-.center{
+.center {
 	text-align: left;
 	margin-left: 30%;
 	margin-right: 30%;
 }
-ul{
+ul {
 	padding: 0;
 }
-li{
+li {
     margin: 0;
 	padding-right: 0;
 	list-style: none;
 }
 .card {
-    border: 1px solid grey;
 	box-shadow:8px 8px 2px #ddd;
+	width: 322px;
   }
-.fact{
+  .card, .content {
+    border: 1px solid grey;
+    padding: 10px;
+}
+
+.fact {
 	font-style: italic;
 }
-span{
+span {
 	font-weight: bold;
 }
-div{
+div {
 	padding:1%;
 }
-img{
-	height:100%;
-	width:100%;
+img {
+	width: 100%;
+    margin: 0 auto;
 }
